# Embedded_C_Projects

./: .gitignore  README.md
automotive_energy/: battery.c  battery.h  battery_hwio.c  battery_hwio.h  battery_types.c  battery_types.h  datatypes.h
battery/: tasks.json
battery/src/: Makefile  battery.cpp  battery.hpp  battery_main.c  battery_main.h  controller.c  controller.h
digital_thermometer/: simulate_thermostat.cpp  thermometer.cpp  thermometer.hpp
digital_thermometer/c_version/: simple_thermostat.c
digital_thermometer/cpp_version/: digital_thermostat.cpp  digital_thermostat.hpp  simulate_thermostat.hpp  thermostat_main.cpp
pid_controller/: pid.c  pid.h
robotics/: datatypes.h  datatypes.hpp  robot.cpp  robot.h  robot.hpp  robot_cntrl.cpp  robot_cntrl.h  robot_cntrl.hpp  robot_main.c  robot_main.cpp
simple_test/: main.c  main.h  main_cpp.cpp  main_cpp.hpp
test_project/src/: CMakeLists.txt  Makefile  main.c  main.cpp  tasks.json  utils.c  utils.hpp
